# solo_sangeet

./: .gitignore  LICENSE  README.md  solo_sangeet.code-workspace
firmware/solo_sangeet/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  solo_sangeet.code-workspace
firmware/solo_sangeet/components/: lv_conf.h
firmware/solo_sangeet/components/audio_player/: CMakeLists.txt  audio_player.c  audio_player_ui.c  ss_ui_theme.c
firmware/solo_sangeet/components/bt_audio/: CMakeLists.txt  bt_audio.c
firmware/solo_sangeet/main/: CMakeLists.txt  solo_sangeet.c  test_lvgl.c
firmware/solo_sangeet_v1/: CMakeLists.txt  sdkconfig  sdkconfig.old  solo_sangeet.code-workspace
firmware/solo_sangeet_v1/components/bt_manager/: CMakeLists.txt  bt_manager.c
firmware/solo_sangeet_v1/components/bt_manager/include/: bt_manager.h
firmware/solo_sangeet_v1/main/: CMakeLists.txt  idf_component.yml  main.c
hardware/3D_design/: ss_case_01.20260214-004745.FCBak  ss_case_01.FCStd
hardware/ss_pcb_rev1_0/: fp-info-cache  ss_pcb_rev1_0.kicad_pcb  ss_pcb_rev1_0.kicad_prl  ss_pcb_rev1_0.kicad_pro  ss_pcb_rev1_0.kicad_sch
hardware/ss_pcb_rev1_0/gerber_rev_0/: ss_pcb_rev1_0-B_Cu.gbr  ss_pcb_rev1_0-B_Mask.gbr  ss_pcb_rev1_0-B_Paste.gbr  ss_pcb_rev1_0-B_Silkscreen.gbr  ss_pcb_rev1_0-Edge_Cuts.gbr  ss_pcb_rev1_0-F_Cu.gbr  ss_pcb_rev1_0-F_Mask.gbr  ss_pcb_rev1_0-F_Paste.gbr  ss_pcb_rev1_0-F_Silkscreen.gbr  ss_pcb_rev1_0-NPTH.drl  ss_pcb_rev1_0-PTH.drl  ss_pcb_rev1_0-job.gbrjob
ui_design/: .lvgl-live-preview.json  main_ui.c  ui_theme.c
ui_design/include/: ui_theme.h
(+30 files in other folders)
