idf_component_register(SRCS "bt_manager.c"
                        INCLUDE_DIRS "include"
                        
                        REQUIRES 
                            bt
                            nvs_flash
                            audio_player
                            ui_manager
                    )
